# trymeson

./: .gitignore  README.md  main.c  meson.build
.devcontainer/: Dockerfile  devcontainer.json
lib/: foo.c  foo.h  meson.build
